updated webuser owned files find output to be more descriptive

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ Definitely:
 
 - Add the following blurbs (rewrite if needed) to the CMS updates section:
 
-If you would like we can set up a script to email you a list of available updates on a schedule of your choosing, just let us know. Please also let us know if you need any assistance with malicious file removal or CMS updates.
+Please also let us know if you need any assistance with malicious file removal or CMS updates.
 
 The page at https://www.drupal.org/security is another highly recommended resource. In addition to the news page and sub-tabs, all security announcements are posted to an email list. To subscribe to email: log in, go to your user profile page and subscribe to the security newsletter on the Edit » My newsletters tab.
 You can also get rss feeds for core, contrib, or public service announcements or follow @drupalsecurity on Twitter.
